[gd_scene load_steps=5 format=3 uid="uid://dacwq50n83ihk"]

[ext_resource type="Script" path="res://box_widget.gd" id="1_4qj4m"]
[ext_resource type="PackedScene" uid="uid://bb442uawktlgi" path="res://axis_handle.tscn" id="2_q6q85"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ppxqw"]
transparency = 1
shading_mode = 0
albedo_color = Color(1, 1, 1, 0.921569)

[sub_resource type="BoxMesh" id="BoxMesh_q5eu5"]
material = SubResource("StandardMaterial3D_ppxqw")
size = Vector3(2, 2, 2)

[node name="BoxWidget" type="Node3D"]
script = ExtResource("1_4qj4m")

[node name="Box" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("BoxMesh_q5eu5")

[node name="Bottom" parent="Box" instance=ExtResource("2_q6q85")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, -1, 0)

[node name="Right" parent="Box" instance=ExtResource("2_q6q85")]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 1, 0, 0)

[node name="Left" parent="Box" instance=ExtResource("2_q6q85")]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -1, 0, 0)

[node name="Top" parent="Box" instance=ExtResource("2_q6q85")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1, 0)

[node name="Front" parent="Box" instance=ExtResource("2_q6q85")]
unique_name_in_owner = true
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 1)

[node name="Back" parent="Box" instance=ExtResource("2_q6q85")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)

[connection signal="position_changed" from="Box/Bottom" to="." method="_on_bottom_position_changed"]
[connection signal="position_changed" from="Box/Right" to="." method="_on_right_position_changed"]
[connection signal="position_changed" from="Box/Left" to="." method="_on_left_position_changed"]
[connection signal="position_changed" from="Box/Top" to="." method="_on_top_position_changed"]
[connection signal="position_changed" from="Box/Front" to="." method="_on_front_position_changed"]
[connection signal="position_changed" from="Box/Back" to="." method="_on_back_position_changed"]
